k8/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: mongo-namespace
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
          livenessPrope:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
                timeoutSeconds: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            httpGet:
              path: /networkingpolicytest/health/alive
              port: 3000
              scheme: HTTP
            successThreshold: 1
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
